--- a/css/bacon-fansite/css/styles.css
+++ b/css/bacon-fansite/css/styles.css
@@ -2,3 +2,11 @@ h1 {
     color: red;
     font-size: 50px;
 }
+
+.bacon {
+    background-color: green;
+}
+
+.broccoli {
+    background-color: red;
+}
