--- a/css/bacon-fansite/css/styles.css
+++ b/css/bacon-fansite/css/styles.css
@@ -3,10 +3,22 @@ h1 {
     font-size: 50px;
 }
 
+img {
+    background-color: red;
+}
+
+img:hover {
+    background-color: gold;
+}
+
 .bacon {
     background-color: green;
 }
 
 .broccoli {
     background-color: red;
+}
+
+#heading {
+    color: aqua;
 }
