--- a/css/absolute-position-challenge/css/styles.css
+++ b/css/absolute-position-challenge/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .red {
     height: 100px;
     width: 100px;
@@ -20,7 +24,4 @@
     height: 100px;
     width: 100px;
     background-color: yellow;
-    position: absolute;
-    top: 0;
-    left: 0;
   }
