--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -1,3 +1,48 @@
 body {
-    background-color: blue;
+    margin: 0;
+    text-align: center;
+}
+
+h1 {
+    margin-top: 0;
+}
+
+.top-container {
+    background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
+}
+
+.top-cloud {
+    position: absolute;
+    top: 50px;
+    right: 300px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+.middle-container {
+    background-color: #7475d8;
+    height: 200px;
+    width: 200px;
+}
+
+.bottom-container {
+    background-color: #f9e4e5;
+    height: 200px;
+    width: 200px;
 }
