--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -5,12 +5,27 @@ body {
 }
 
 h1 {
-    margin-top: 0;
+    margin: 50px auto 0 auto;
+    /* line-height: 2; */
+    font-size: 5.62rem;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
 }
 
-h2, h3 {
+h2 {
+    font-size: 2.5rem;
+    font-weight: normal;
     font-family: 'Montserrat', sans-serif;
+    color: #66BFBF;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+a {
+    color: #11999E;
 }
 
 .top-container {
@@ -34,4 +49,8 @@ h2, h3 {
 .profile-img {
     height: 150px;
     width: 150px;
+}
+
+.pro {
+    text-decoration: underline;
 }
