designs font and color of portfolio  as per end result

--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -23,12 +23,7 @@ h3 {
     color: #11999E;
 }
 
-a {
-    color: #11999E;
-}
-
-
-hr{
+hr {
     border-style: none;
     border-top-style: dotted;
     border-color: #EAF6F6;
@@ -88,3 +83,42 @@ hr{
 .skill-info {
     line-height: 2;
 }
+
+.bottom-container {
+    background-color: #66BFBF;
+}
+
+a {
+    color: #11999E;
+}
+
+.copyright {
+    color: #EAF6F6;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
