--- a/projects/tindog/css/styles.css
+++ b/projects/tindog/css/styles.css
@@ -8,6 +8,12 @@ h1 {
     line-height: 1.5;
 }
 
+h2 {
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 h3 {
     font-weight: bold;
 }
@@ -20,16 +26,15 @@ p {
     padding: 3% 15%;
 }
 
-/* Title */
 
+
+/* Title Section */
 #title {
     color: #FFF;
     background-color: #FF4C68;
 }
 
-
 /* Nav Bar */
-
 .navbar {
     padding: 0 0 72px;
 }
@@ -49,7 +54,6 @@ p {
     font-weight: 200;
 }
 
-
 .download-button {
     margin: 5% 3% 5% 0;
 }
@@ -64,8 +68,8 @@ p {
 }
 
 
-/* Features */
 
+/* Features Section */
 #features {
     padding: 7% 15%;
 }
@@ -82,4 +86,34 @@ p {
 
 .icon:hover {
     color: #FF4C68;
+}
+
+
+
+/* Testimonials Section */
+#testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    color: #FFF;
+    background-color: #EF8172;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+
+
+/* Press Section */
+#press {
+    text-align: center;
+    background-color: #EF8172;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
 }
