fixes padding in testimonials section to push carousel buttons to the sides

--- a/projects/tindog/css/styles.css
+++ b/projects/tindog/css/styles.css
@@ -92,7 +92,6 @@ p {
 
 /* Testimonials Section */
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     color: #FFF;
     background-color: #EF8172;
@@ -102,6 +101,10 @@ p {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 
