--- a/projects/tindog/css/styles.css
+++ b/projects/tindog/css/styles.css
@@ -120,3 +120,15 @@ p {
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+
+
+/* Pricing Section */
+#pricing {
+    text-align: center;
+    padding: 100px;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
