implements z-index for hero image in tindog

--- a/projects/tindog/css/styles.css
+++ b/projects/tindog/css/styles.css
@@ -23,7 +23,7 @@ p {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 8%;
 }
 
 
@@ -58,13 +58,11 @@ p {
     margin: 5% 3% 5% 0;
 }
 
-.title-image-container {
-    text-align: center;
-}
-
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 20%;
 }
 
 
@@ -72,6 +70,8 @@ p {
 /* Features Section */
 #features {
     padding: 7% 15%;
+    background-color: #FFF;
+    position: relative;
 }
 
 .feature-box {
