--- a/projects/tindog/css/styles.css
+++ b/projects/tindog/css/styles.css
@@ -65,6 +65,18 @@ p {
     right: 25%;
 }
 
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0deg);
+    }
+}
+
 
 
 /* Features Section */
