--- a/projects/to-do-list-v1/views/list.ejs
+++ b/projects/to-do-list-v1/views/list.ejs
@@ -2,9 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>To Do List</title>
+        <title>ToDo List</title>
     </head>
     <body>
-        <h1>It's a <%= day %>!</h1>
+        <h1><%= day %></h1>
+
+        <ul>
+            <% for(var i=0; i<items.length; i++) { %>
+                <li><%= items[i] %></li>
+            <% } %>
+        </ul>
+
+        <form action="/" method="post">
+            <input type="text" name="newItem" required>
+            <button type="submit" name="button">Add</button>
+        </form>
     </body>
 </html>
