--- a/projects/to-do-list-v1/views/list.ejs
+++ b/projects/to-do-list-v1/views/list.ejs
@@ -8,7 +8,7 @@
         <h1><%= day %></h1>
 
         <ul>
-            <% for(var i=0; i<items.length; i++) { %>
+            <% for(let i=0; i<items.length; i++) { %>
                 <li><%= items[i] %></li>
             <% } %>
         </ul>
