todo-list: adds classes defined in stylesheet to fix design of list page

--- a/projects/to-do-list-v1/views/list.ejs
+++ b/projects/to-do-list-v1/views/list.ejs
@@ -6,17 +6,23 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <h1><%= day %></h1>
+        <div class="box" id="heading">
+            <h1><%= day %></h1>
+        </div>
 
-        <ul>
+        <div class="box">
             <% for(let i=0; i<items.length; i++) { %>
-                <li><%= items[i] %></li>
+                <div class="item">
+                    <input type="checkbox">
+                    <p><%= items[i] %></p>
+                </div>
             <% } %>
-        </ul>
 
-        <form action="/" method="post">
-            <input type="text" name="newItem" required>
-            <button type="submit" name="button">Add</button>
-        </form>
+            <form class="item" action="/" method="post">
+                <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
+                <button type="submit" name="button">+</button>
+            </form>
+        </div>
+
     </body>
 </html>
