--- a/projects/to-do-list-v1/views/list.ejs
+++ b/projects/to-do-list-v1/views/list.ejs
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>ToDo List</title>
-        <link rel="stylesheet" href="./css/styles.css">
-    </head>
-    <body>
-        <div class="box" id="heading">
-            <h1><%= day %></h1>
-        </div>
+<%- include('header') -%>
 
-        <div class="box">
-            <% for(let i=0; i<items.length; i++) { %>
-                <div class="item">
-                    <input type="checkbox">
-                    <p><%= items[i] %></p>
-                </div>
-            <% } %>
+    <div class="box" id="heading">
+        <h1><%= day %></h1>
+    </div>
+    
+    <div class="box">
+        <% for(let i=0; i<items.length; i++) { %>
+            <div class="item">
+                <input type="checkbox">
+                <p><%= items[i] %></p>
+            </div>
+        <% } %>
+        
+        <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
+            <button type="submit" name="button">+</button>
+        </form>
+    </div>
 
-            <form class="item" action="/" method="post">
-                <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
-                <button type="submit" name="button">+</button>
-            </form>
-        </div>
-
-    </body>
-</html>
+<%- include('footer') -%>
