blog: includes header and footer in homepage

--- a/projects/blog/views/home.ejs
+++ b/projects/blog/views/home.ejs
@@ -1,3 +1,7 @@
-<h1>Home</h1>
+<%- include('header') -%>
+    
+    <h1>Home</h1>
 
-<p><%= content %></p>
+    <p><%= content %></p>
+
+<%- include('footer') -%>
