--- a/projects/blog/views/compose.ejs
+++ b/projects/blog/views/compose.ejs
@@ -9,7 +9,7 @@
         
         <div class="form-group">
             <label>Post</label>
-            <textarea class="form-control" name="postBody" rows="5" cols="30" required></textarea>
+            <textarea class="form-control" name="postContent" rows="5" cols="30" required></textarea>
         </div>
         
         <button class="btn btn-primary" type="submit">Publish</button>
