--- a/projects/blog/views/home.ejs
+++ b/projects/blog/views/home.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header') -%>
     <h1>Home</h1>
     <p><%= content %></p>
+    <%= console.log(posts); %>
 <%- include('./partials/footer') -%>
