--- a/projects/blog/views/home.ejs
+++ b/projects/blog/views/home.ejs
@@ -1,5 +1,11 @@
 <%- include('./partials/header') -%>
     <h1>Home</h1>
     <p><%= content %></p>
-    <%= console.log(posts); %>
+
+    <% posts.forEach(post => { %>
+        
+        <h1><%= post.title %></h1>
+        <p><%= post.content %></p>
+        
+    <% }) %>
 <%- include('./partials/footer') -%>
