--- a/projects/todo-list-v2/views/list.ejs
+++ b/projects/todo-list-v2/views/list.ejs
@@ -6,12 +6,14 @@
     
     <div class="box">
         <% items.forEach((item) => { %>
-            <div class="item">
-                <input type="checkbox">
-                <p><%= item.name %></p>
-            </div>
+            <form class="" action="">
+                <div class="item">
+                    <input type="checkbox">
+                    <p><%= item.name %></p>
+                </div>
+            </form>
         <% }) %>
-                
+
         <form class="item" action="/" method="post">
             <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
             <button type="submit" name="button">+</button>
