--- a/projects/todo-list-v2/views/list.ejs
+++ b/projects/todo-list-v2/views/list.ejs
@@ -1,7 +1,7 @@
 <%- include('header') -%>
 
     <div class="box" id="heading">
-        <h1><%= day %></h1>
+        <h1><%= title %></h1>
     </div>
     
     <div class="box">
