--- a/projects/todo-list-v2/views/list.ejs
+++ b/projects/todo-list-v2/views/list.ejs
@@ -17,7 +17,7 @@
 
         <form class="item" action="/" method="post">
             <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
-            <button type="submit" name="button">+</button>
+            <button type="submit" name="list" value="<%= title %>">+</button>
         </form>
     </div>
 
